--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@babel/runtime": "7.0.0",
     "expo": "^31.0.2",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react": "^16.6.0-alpha.8af6728",
+    "react-native": "^0.57.8",
     "react-native-datepicker": "1.7.2",
     "react-native-elements": "^0.19.1",
     "react-navigation": "2.0.1",
-    "react-redux": "5.0.7",
+    "react-redux": "^6.0.0",
     "redux": "4.0.0",
     "redux-logger": "3.0.6",
-    "redux-thunk": "2.2.0"
+    "redux-thunk": "2.2.0",
+    "yarn.lock": "^0.0.1-security"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.0.0",
+    "schedule": "^0.4.0"
   },
   "private": true
 }
