--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^16.6.0-alpha.8af6728",
     "react-native": "^0.57.8",
     "react-native-datepicker": "1.7.2",
-    "react-native-elements": "^0.19.1",
+    "react-native-elements": "^1.0.0-beta7",
     "react-navigation": "2.0.1",
     "react-redux": "^6.0.0",
     "redux": "4.0.0",
