--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "expo": "^31.0.2",
     "react": "^16.6.0-alpha.8af6728",
     "react-native": "^0.57.8",
+    "react-native-animatable": "^1.2.4",
     "react-native-datepicker": "1.7.2",
     "react-native-elements": "^1.0.0-beta7",
     "react-native-swipeout": "^2.3.3",
