--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^6.0.0",
     "redux": "4.0.0",
     "redux-logger": "3.0.6",
+    "redux-persist": "^5.9.1",
     "redux-thunk": "2.2.0",
     "yarn.lock": "^0.0.1-security"
   },
