--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-native": "^0.57.8",
     "react-native-animatable": "^1.2.4",
     "react-native-datepicker": "1.7.2",
-    "react-native-elements": "^1.0.0-beta7",
+    "react-native-elements": "^1.1.0",
     "react-native-swipeout": "^2.3.3",
     "react-navigation": "2.0.1",
     "react-redux": "^6.0.0",
